--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <section id="col1">
             <video id="pod" controls>
                 <source src="v/BTS156clip.mp4">
+                <track id="en" kind="captions" label="English (captions)" srclang="en" src="captions/BTS156clip.vtt" default>
 
                 <h2>Beach too Sandy, Water too Wet: Episode 156</h2>
             </video>
 
-            <div id="controls">
+            <div id="controls" class="hide">
                 <form id="audio-form">
                     <fieldset>
                         <legend>Playback Controls</legend>
@@ -29,16 +30,19 @@
                         onclick="playVideo(pod)" 
                         value=&#9654;>
                         <input type="button" id="pause_button" onclick="pauseVideo(pod)" value = &#x23F8;>
-						<input type="button" id="mute" onclick="muteVid(pod)" value="Mute" />
-						<input type="button" id="unmute" onclick="unmuteVid(pod)" value="Unmute" />
-
-                        <fieldset>
-                            <legend>Audio Navigation</legend>
-                            <input type="button" id="rewind" onclick="seekVideo(pod, 0)" value="Beginning" />
-                            <input type="button" id="end" onclick="seekVideo(pod, 304)" value="End" />
-                            <input type="button" id="rev1" value="First Review"/>
-                            <input type="button" id="rev2" value="Second Review">
+						<input type="button" id="mute" onclick="muteVid(pod)" value="Mute">
+						<input type="button" id="unmute" onclick="unmuteVid(pod)" value="Unmute">
                     </fieldset> 
+
+                    <fieldset>
+                        <legend>Audio Navigation</legend>
+                        <input type="button" id="rewind" onclick="seekVideo(pod, 0)" value="Beginning">
+                        <input type="button" id="end" onclick="seekVideo(pod, 304)" value="End">
+                        <input type="button" id="rev1" value="First Review">
+                        <input type="button" id="rev2" value="Second Review">
+                    </fieldset>
+
+                     
                 </form>
             </div>
 
